--- a/src/html-editor/components/html-editor.css
+++ b/src/html-editor/components/html-editor.css
@@ -6,3 +6,12 @@
     background: #eee;
     box-shadow: 2px 2px 6px #888888;
 }
+
+.html-editor-input {
+    width: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+}
