--- a/src/html-editor/components/html-editor.css
+++ b/src/html-editor/components/html-editor.css
@@ -13,3 +13,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
 }
+
+.html-editor-paragraph {
+    outline: none;
+}
