--- a/src/command/components/command-dialog.css
+++ b/src/command/components/command-dialog.css
@@ -1,7 +1,7 @@
 .command-dialog {
     position: absolute;
     width: 400px;
-    box-shadow: 2px 2px 6px #888888;
+    /* box-shadow: 2px 2px 6px #888888; */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
