--- a/src/html-editor/components/html-editor.css
+++ b/src/html-editor/components/html-editor.css
@@ -2,7 +2,8 @@
     position: absolute;
     padding: 10px 30px;
     background: #eee;
-    box-shadow: 2px 2px 6px #888888;
+    /* box-shadow: 2px 2px 6px #888888; */
+    overflow-y: auto;
 }
 
 .html-editor-input {
