--- a/src/command/components/command-dialog.css
+++ b/src/command/components/command-dialog.css
@@ -8,22 +8,17 @@
     background: #222;
 }
 
-.command-dialog-header {
-    height: 20px;
-    padding-left: 18px;
-}
-
 .command-dialog-history {
     height: 240px;
     line-height: 28px;
-    padding: 8px 0 0 18px;
+    padding: 12px 0 0 18px;
     color: #ddd;
     overflow-y: auto;
 }
 
 .command-dialog-input-row {
     height: 40px;
-    line-height: 40px;
+    line-height: 35px;
     padding-left: 18px;
     color: #ddd;
 }
@@ -31,7 +26,7 @@
 .command-dialog-input {
     background: transparent;
     border: 0;
-    width: 344px;
+    width: 336px;
     color: #ddd;
     outline: none;
     line-height: 40px;
@@ -39,4 +34,29 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     font-size: 16px;
+}
+
+.command-dialog-list-button {
+    background: transparent;
+    border: none;
+    color: #ddd;
+    outline: none;
+    font-size: 10px;
+    transform: translateY(-2px) scale(1.6,0.8);
+}
+
+.command-dialog-list-items {
+    height: 200px;
+    overflow-y: auto;
+    background: #222;
+    margin-top: -3px;
+    margin-left: -18px;
+}
+
+.command-dialog-list-item {
+    padding-left: 18px;
+}
+
+.command-dialog-list-item:hover {
+    background: #444;
 }
