--- a/src/word-card-editor/components/word-card-editor.css
+++ b/src/word-card-editor/components/word-card-editor.css
@@ -19,6 +19,10 @@
     font-weight: 600;
 }
 
+.word-card-editor-quiz-row {
+    margin-bottom: 20px;
+}
+
 .card-editor-answer-paragraph {
     font-size: 18px;
 }
